[APPDEV-5080] - UI- SO3 template: alignment issue for quantity box
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@43167 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/quickshop/standing_order_3.css
+++ b/projects/Media/docroot/assets/css/quickshop/standing_order_3.css
@@ -1196,3 +1196,8 @@
 .standing-orders-3 #ec-drawer .tsEcoFriendlyTimeC{
 	color: #333;
 }
+
+/* APPBUG-4587 */
+.standing-orders-3 #cartcontent .cartline-quantity .qtyinput{
+	margin-top: 0;
+}
